[project]
name = "hue-mcp-service"
version = "0.1.0"
description = "FastMCP service for controlling Philips Hue lights"
authors = [{name = "Claude Code User", email = "user@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.0.0",
    "qhue>=2.0.0",
    "requests>=2.25.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py38"